# proseco_planning

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  package.xml
doc/: MainPage.doxy  Structure.doxy
docs/: MainPage_8doxy.html  actionClass_8h.html  actionClass_8h__dep__incl.map  actionClass_8h__dep__incl.md5  actionClass_8h_source.html  actionSpaceRectangle_8cpp.html  actionSpaceRectangle_8cpp__incl.map  actionSpaceRectangle_8cpp__incl.md5  actionSpaceRectangle_8h.html  actionSpaceRectangle_8h__dep__incl.map  actionSpaceRectangle_8h__dep__incl.md5  actionSpaceRectangle_8h__incl.map  actionSpaceRectangle_8h__incl.md5  actionSpaceRectangle_8h_source.html  actionSpace_8cpp.html  actionSpace_8cpp__incl.map  actionSpace_8cpp__incl.md5  actionSpace_8h.html  actionSpace_8h__dep__incl.map  actionSpace_8h__dep__incl.md5  actionSpace_8h__incl.map  actionSpace_8h__incl.md5  actionSpace_8h_source.html  action_8cpp.html  action_8cpp__incl.map  action_8cpp__incl.md5  action_8h.html  action_8h__dep__incl.map  action_8h__dep__incl.md5  action_8h__incl.map  action_8h__incl.md5  action_8h_source.html  agent_8cpp.html  agent_8cpp__incl.map  agent_8cpp__incl.md5  agent_8h.html  agent_8h__dep__incl.map  agent_8h__dep__incl.md5  agent_8h__incl.map  agent_8h__incl.md5  (+1110 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+79 more)
include/proseco_planning/: monteCarloTreeSearch.h  node.h  scenarioEvaluation.h
include/proseco_planning/action/: action.h  actionClass.h  actionSpace.h  actionSpaceRectangle.h  noiseGenerator.h
include/proseco_planning/agent/: agent.h  desire.h  vehicle.h
include/proseco_planning/agent/cost_model/: costContinuous.h  costExponential.h  costLinear.h  costLinearCooperative.h  costModel.h  costNonLinear.h
include/proseco_planning/collision_checker/: collisionChecker.h  collisionCheckerCircleApproximation.h
include/proseco_planning/config/: computeOptions.h  configuration.h  defaultConfiguration.h  outputOptions.h  scenarioOptions.h
include/proseco_planning/exporters/: exporter.h  jsonExporter.h  msgPackExporter.h
include/proseco_planning/math/: mathlib.h
include/proseco_planning/policies/: expansionPolicy.h  finalSelectionPolicy.h  policy.h  selectionPolicy.h  simulationPolicy.h  updatePolicy.h
include/proseco_planning/policies/expansion/: expansionUCT.h
include/proseco_planning/policies/final_selection/: finalSelectionKernelRegressionLCB.h  finalSelectionMaxActionValue.h  finalSelectionMaxVisitCount.h  finalSelectionMostTrusted.h  finalSelectionSampleExpQ.h
include/proseco_planning/policies/selection/: selectionUCTProgressiveWidening.h
include/proseco_planning/policies/simulation/: simulationMultiThread.h  simulationSingleThread.h
include/proseco_planning/policies/update/: updateUCT.h
include/proseco_planning/search_guide/: searchGuide.h  searchGuideBlindValue.h  searchGuideRandom.h
include/proseco_planning/trajectory/: constantacceleration.h  polynomialgenerator.h  trajectory.h  trajectorygenerator.h
include/proseco_planning/util/: alias.h  json.h  utilities.h
src/proseco_planning/: monteCarloTreeSearch.cpp  node.cpp  scenarioEvaluation.cpp
src/proseco_planning/action/: action.cpp  actionSpace.cpp  actionSpaceRectangle.cpp  noiseGenerator.cpp
src/proseco_planning/agent/: agent.cpp  desire.cpp  vehicle.cpp
src/proseco_planning/agent/cost_model/: costContinuous.cpp  costExponential.cpp  costLinear.cpp  costLinearCooperative.cpp  costModel.cpp  costNonLinear.cpp
src/proseco_planning/collision_checker/: collisionChecker.cpp  collisionCheckerCircleApproximation.cpp
src/proseco_planning/config/: computeOptions.cpp  configuration.cpp  defaultConfiguration.cpp  outputOptions.cpp  scenarioOptions.cpp
src/proseco_planning/exporters/: exporter.cpp  jsonExporter.cpp  msgPackExporter.cpp
src/proseco_planning/math/: mathlib.cpp
src/proseco_planning/policies/: expansionPolicy.cpp  finalSelectionPolicy.cpp  policy.cpp  selectionPolicy.cpp  simulationPolicy.cpp  updatePolicy.cpp
src/proseco_planning/policies/expansion/: expansionUCT.cpp
src/proseco_planning/policies/final_selection/: finalSelectionKernelRegressionLCB.cpp  finalSelectionMaxActionValue.cpp  finalSelectionMaxVisitCount.cpp  finalSelectionMostTrusted.cpp  finalSelectionSampleExpQ.cpp
src/proseco_planning/policies/selection/: selectionUCTProgressiveWidening.cpp
src/proseco_planning/policies/simulation/: simulationMultiThread.cpp  simulationSingleThread.cpp
src/proseco_planning/search_guide/: searchGuide.cpp  searchGuideBlindValue.cpp  searchGuideRandom.cpp
src/proseco_planning/trajectory/: constantacceleration.cpp  polynomialgenerator.cpp  trajectory.cpp  trajectorygenerator.cpp
src/proseco_planning/util/: utilities.cpp
src/tests/: CMakeLists.txt  test_invalid.cpp  test_json_msgpack.cpp  test_node.cpp  test_proseco_planning.cpp
src/tests/action/: test_actionClass.cpp
src/tests/agent/: test_agent.cpp  test_desire.cpp  test_vehicle.cpp
src/tests/agent/cost_model/: test_nonlinear.cpp  test_potential.cpp
src/tests/collision_checker/: test_collisionChecker.cpp  validateCollisionCheckerCircleApproximation.py
src/tests/math/: test_mathlib.cpp
src/tests/policies/: test_policies.cpp  test_similarity_update.cpp
src/tests/policies/final_selection/: test_finalSelectionKernelRegressionLCB.cpp  test_finalSelectionSampleExpQ.cpp
src/tests/policies/update/: test_updatePolicy.cpp
src/tests/trajectory/: test_trajectoryGenerator.cpp
src/tools/: CMakeLists.txt  actionAnalysis.cpp  action_analysis.py  stateAnalysis.cpp  state_analysis.py  tool.py  trajectoryAnalysis.cpp  trajectory_analysis.py
(+1 files in other folders)
